--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,39 @@
     <title>Nomad Designs</title>
 </head>
 <body>
+
+    <h1>Welcome to Nomad Designs</h1>
+    <p>Our website is currently under construction. Please check back soon.</p>
+
+    <div class="container">
+        <div class="social">
+            <a href="https://www.facebook.com/nomaddesigns" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/nomaddesigns" target="_blank">Instagram</a>
+            <a href="https://www.twitter.com/nomaddesigns" target="_blank">Twitter</a>
+        </div>
+        <div class="two">
+            <p>2</p>
+        </div>
+        <div class="three">
+            <p>3</p>
+        </div>
+        <div class="four">
+            <p>4</p>
+        </div>
+        <div class="five">
+            <p>5</p>
+        </div>
+        <div class="six">
+            <p>6</p>
+        </div>
+        <div class="seven">
+            <p>7</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2020 Nomad Designs</p>
+    </footer>
     
 </body>
 </html>
