--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/utility.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>Nomad Designs</title>
 </head>
 <body>
@@ -17,24 +17,11 @@
             <a href="https://www.instagram.com/nomaddesigns" target="_blank">Instagram</a>
             <a href="https://www.twitter.com/nomaddesigns" target="_blank">Twitter</a>
         </div>
-        <div class="two">
-            <p>2</p>
-        </div>
-        <div class="three">
-            <p>3</p>
-        </div>
-        <div class="four">
-            <p>4</p>
-        </div>
-        <div class="five">
-            <p>5</p>
-        </div>
-        <div class="six">
-            <p>6</p>
-        </div>
-        <div class="seven">
-            <p>7</p>
-        </div>
+        <div class="flex">1</div>
+        <div class="flex">2</div>
+        <div class="flex">3</div>
+        <div class="flex">4</div>
+        <div class="flex">5</div>
     </div>
 
     <footer>
