--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
     <p>Our website is currently under construction. Please check back soon.</p>
 
     <div class="container">
-        <div class="social">
-            <a href="https://www.facebook.com/nomaddesigns" target="_blank">Facebook</a>
-            <a href="https://www.instagram.com/nomaddesigns" target="_blank">Instagram</a>
-            <a href="https://www.twitter.com/nomaddesigns" target="_blank">Twitter</a>
-        </div>
-        <div class="flex">1</div>
-        <div class="flex">2</div>
-        <div class="flex">3</div>
-        <div class="flex">4</div>
-        <div class="flex">5</div>
+        <div class="box" id="box1">1</div>
+        <div class="box" id="box2">2</div>
+        <div class="box" id="box3">3</div>
+        <div class="box" id="box4">4</div>
     </div>
 
     <footer>
